Fix principal banner overflow

--- a/anna-codina/rakutenTV-challenge/style.css
+++ b/anna-codina/rakutenTV-challenge/style.css
@@ -30,7 +30,9 @@ li:hover, h4:hover{
     display: flex;
     flex-direction: column;
 }
-
+header{
+    overflow: hidden;
+}
 .flex-spacer{
     flex-grow: 1;
 }
